src/objects/Contact_Certification__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Certifications</relationshipLabel>
        <relationshipName>Contact_Certifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Combination of Contact Id,Training Bundle Id and Source</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_Training_Bundle_ID__c</fullName>
        <label>LMS Training Bundle ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Completed_Date__c</fullName>
        <label>Training Completed Date</label>
        <type>Date</type>
    </fields>
    <label>Contact Certification</label>
    <nameField>
        <label>Contact Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>